# astrbot-t2i-service-distributed

./: Dockerfile  README.md  docker-compose.yml  k8s-deployment.yaml  pyproject.toml  requirements.txt  test_service.py
src/: api.py  config.py  storage.py
