[project]
name = "astrbot-t2i-service"
version = "0.1.0"
description = "A text-to-image rendering service using FastAPI and Playwright."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "certifi>=2025.11.12",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "playwright>=1.54.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
